--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'com.contactsapp'
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         applicationId "com.contactsapp"
         minSdk 24
-        targetSdk 34
+        targetSdk 35
         versionCode 1
         versionName "1.0"
 
@@ -34,7 +34,8 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
-        compose true
+        viewBinding true
+        dataBinding true
     }
     composeOptions {
         kotlinCompilerExtensionVersion '1.5.1'
@@ -47,20 +48,21 @@ android {
 }
 
 dependencies {
-
+    implementation(project(":feature:home"))
+    implementation(project(":core:common"))
     implementation libs.androidx.core.ktx
     implementation libs.androidx.lifecycle.runtime.ktx
-    implementation libs.androidx.activity.compose
-    implementation platform(libs.androidx.compose.bom)
-    implementation libs.androidx.ui
-    implementation libs.androidx.ui.graphics
-    implementation libs.androidx.ui.tooling.preview
-    implementation libs.androidx.material3
+
+    implementation(libs.androidx.constraintlayout)
+    implementation(libs.androidx.splash.screen)
+    implementation(libs.androidx.fragment.ktx)
+    implementation(libs.bundles.androidx.navigation)
+    implementation(libs.hilt)
+    implementation(libs.coroutines)
+    implementation(libs.timber)
+    implementation(libs.kotlinx.serialization.json)
+
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
-    androidTestImplementation platform(libs.androidx.compose.bom)
-    androidTestImplementation libs.androidx.ui.test.junit4
-    debugImplementation libs.androidx.ui.tooling
-    debugImplementation libs.androidx.ui.test.manifest
 }
