--- a/settings.gradle
+++ b/settings.gradle
@@ -21,3 +21,5 @@ dependencyResolutionManagement {
 
 rootProject.name = "Contacts App"
 include ':app'
+include ':core:common'
+include ':feature:home'
