--- a/core/ui/build.gradle
+++ b/core/ui/build.gradle
@@ -3,10 +3,11 @@ plugins {
     alias(libs.plugins.jetbrains.kotlin.android)
     id 'kotlin-kapt'
     id 'com.google.dagger.hilt.android'
+
 }
 
 android {
-    namespace 'com.feature.home'
+    namespace 'com.ui'
     compileSdk 35
 
     defaultConfig {
@@ -26,10 +27,6 @@ android {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
-    buildFeatures {
-        viewBinding true
-        dataBinding true
-    }
     kotlinOptions {
         jvmTarget = '17'
     }
@@ -39,32 +36,18 @@ android {
         resources.excludes.add("META-INF/LICENSE.md")
         resources.excludes.add("META-INF/LICENSE-notice.md")
         resources.excludes.add("/META-INF/gradle/incremental.annotation.processors")
+
     }
 }
 
 dependencies {
 
-    implementation project(":core:common")
-    implementation project(":core:ui")
-
-    implementation "com.github.bumptech.glide:glide:4.14.2"
-
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
-    implementation libs.material
     implementation "com.google.dagger:hilt-android:2.51.1"
     kapt "com.google.dagger:hilt-compiler:2.51.1"
-
-    implementation(libs.androidx.fragment.ktx)
-    implementation libs.androidx.navigation.fragment.ktx
-    implementation libs.androidx.navigation.ui.ktx
-    implementation libs.androidx.swiperefreshlayout
+    implementation libs.material
     testImplementation libs.junit.test
     androidTestImplementation libs.junit.androidTest
     androidTestImplementation libs.espesso.androidTest
-}
-
-// Allow references to generated code
-kapt {
-    correctErrorTypes true
 }
