--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,6 +27,11 @@ recyclerview = "1.3.2"
 cardview = "1.0.0"
 timber = "5.0.1"
 
+hiltPlugin = "2.51.1"
+kspGradlePlugin = "2.0.0-1.0.22"
+
+
+
 
 # Tests
 junitAndroid = "1.1.5"
@@ -100,7 +105,6 @@ hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.r
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 
 
-
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -116,4 +120,7 @@ androidx-lifecycle = ["androidx.lifecycle", "androidx.lifecycle.viewmodel", "and
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 android-library = { id = "com.android.library", version.ref = "agp" }
+hilt = { id = "dagger.hilt.android.plugin", version.ref = "hiltPlugin" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "kspGradlePlugin" }
+
 
