--- a/core/ui/build.gradle
+++ b/core/ui/build.gradle
@@ -27,6 +27,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
+    buildFeatures {
+        viewBinding true
+        dataBinding true
+    }
     kotlinOptions {
         jvmTarget = '17'
     }
@@ -41,12 +45,22 @@ android {
 }
 
 dependencies {
+    implementation project(":core:common")
+    implementation project(":core:business")
+    implementation "androidx.databinding:viewbinding:8.8.1"
+
+    implementation "com.github.bumptech.glide:glide:4.14.2"
 
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
+    implementation libs.material
     implementation "com.google.dagger:hilt-android:2.51.1"
     kapt "com.google.dagger:hilt-compiler:2.51.1"
-    implementation libs.material
+
+    implementation(libs.androidx.fragment.ktx)
+    implementation libs.androidx.navigation.fragment.ktx
+    implementation libs.androidx.navigation.ui.ktx
+    implementation libs.androidx.swiperefreshlayout
     testImplementation libs.junit.test
     androidTestImplementation libs.junit.androidTest
     androidTestImplementation libs.espesso.androidTest
