--- a/settings.gradle
+++ b/settings.gradle
@@ -31,3 +31,5 @@ include ':app'
 include ':core:common'
 include ':feature:home'
 include ':core:ui'
+include ':feature:search'
+include ':core:business'
